Added text to happy.png

--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
                 <button id="yesBtn">Yes</button>
                 <button id="noBtn">No</button>
             </div>
-            <button id="changeMindBtn" style="display: none;">Okay, I changed my mind</button>
-            <div id="yesMessage" style="display: none;">See you on wednesday then 😘!</div>
-
+            <!-- Inside mainContentSection or at a similar structural level -->
+            <div id="yesMessage">Your special message goes here!</div>
         </div>
-
         <!-- Audio Elements -->
         <audio id="generalMusic">
             <source src="public/lovefool.mp3" type="audio/mpeg">
